--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Our custom styles (BEM, modularized) -->
+    <!-- Custom styles (BEM, modularized) -->
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
 <body>
@@ -30,6 +30,10 @@
     <main class="container">
         {% block content %}{% endblock %}
     </main>
+
+    <button class="button">
+        Test
+    </button>
 
     <!-- Footer -->
     <footer class="footer mt-4">
